@@ -4,6 +4,7 @@ Jorn Baayen <jorn@nl.linux.org>
 With additional help from:
 
 Viet Yen Nguyen <nguyen@cs.utwente.nl>
+Lee Willis <lee@leewillis.co.uk>
 
 
 Includes code stolen from:
